# qublis-2-74136-v2.0

./: .gitignore  Cargo.toml  LICENSE  README.md  VERSION  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
ci_core/: Cargo.toml
ci_core/src/: collective_sync.rs  config.rs  error.rs  lib.rs  metrics.rs  moral_regulator.rs  morphic_ai.rs  prelude.rs  types.rs
deploy/: Cargo.toml
deploy/src/: ci_fork_launcher.rs  config.rs  error.rs  main.rs  metrics.rs  prelude.rs  qnetx_node_bootstrap.rs  types.rs
docs/: architecture.md  consensus_neuroflux.md  deploy_guide.md  digital_ocean_deploy.md  ethics_engines.md  glossary.md  neuroflux_rl.md  qblang_quickstart.md  qblang_spec.md  qid_lattice.md  qlink_spec.md  qmesh_spec.md  qnet_spec.md  qnet_vs_qnetx.md  qnetx_spec.md  qnum_spec.md  tesseract_tps_model.md
examples/: latency_wave_demo.rs  neuroflux_training.rs  simple_tps.rs
qlink/: Cargo.toml
qlink/src/: config.rs  conscious_consent.rs  error.rs  ethics_lattice.rs  lib.rs  metrics.rs  mutation_engine.rs  prelude.rs  qid_layer.rs  types.rs
qmesh/: Cargo.toml
qmesh/src/: cognitive_entropy.rs  config.rs  entropic_dag.rs  error.rs  lib.rs  metrics.rs  prelude.rs  retrochain_tracker.rs  types.rs
qnet/: Cargo.toml
qnet/src/: config.rs  error.rs  lib.rs  metrics.rs  prelude.rs  relay.rs  router.rs  teleport_core.rs  transport.rs  types.rs
qnetx/: Cargo.toml
qnetx-node/: .gitignore  Cargo.toml  README.md
qnetx-node/config/: default.toml  schema.json
qnetx-node/examples/: quick_start.rs
qnetx-node/src/: bootstrap.rs  cli.rs  config.rs  error.rs  main.rs  metrics.rs  node.rs  prelude.rs  telemetry.rs
qnetx-node/src/commands/: init.rs  mod.rs  run.rs  status.rs
qnetx-node/tests/: bootstrap_tests.rs  config_tests.rs  integration_tests.rs  mod.rs  node_tests.rs
qnetx/src/: anomaly_filter.rs  config.rs  error.rs  lib.rs  metrics.rs  prelude.rs  quantum_mesh.rs  state_condenser.rs  types.rs  zero_prop.rs
qnum/: Cargo.toml
qnum/src/: entangle.rs  gates.rs  lib.rs  measure.rs  qid.rs  qnum.rs
runtime/: Cargo.toml
runtime/src/: causal_reflector.rs  config.rs  consensus_neuroflux.rs  entanglement_loop.rs  error.rs  lib.rs  metrics.rs  prelude.rs  types.rs  wasm.rs
runtime/src/tests/: consensus_tests.rs  entanglement_tests.rs  mod.rs  reflector_tests.rs
sim/: Cargo.toml
sim/src/: config.rs  error.rs  latency_wave.rs  lib.rs  metrics.rs  network_sim.rs  neuroflux_simulator.rs  prelude.rs  report_generator.rs  tps_simulator.rs  types.rs
