[workspace]
members = [
    "qnum",
    "qnet",
    "qnetx",
    "qmesh",
    "qlink",
    "ci_core",
    "sim",
    "deploy",
]

# Exclude non-crate directories
exclude = [
    "docs/*",
    "examples/*",
    ".github/*",
]

[workspace.dependencies]
qublis-qnum = { path = "qnum" }
qublis-qnet = { path = "qnet" }
qublis-qlink = { path = "qlink" }
qublis-ci_core = { path = "ci_core" }
qublis-qmesh = { path = "qmesh" }
qublis-qnetx = { path = "qnetx" }
qublis-sim = { path = "sim" }
qublis-deploy = { path = "deploy" }
