[package]
name = "qublis-qmesh"
version = "2.0.0"
edition = "2021"
authors = ["Nic Neil <nic@qublis.org>"]
description = "Entropic DAG, cognitive entropy, and retrochain tracking for Qublis v2.0"
license = "Proprietary"
repository = "https://github.com/YourOrg/qublis-2-74136-v2.0"
readme = "README.md"
keywords = ["quantum", "mesh", "entropic", "dag", "retrochain", "qublis"]
categories = ["data-structures", "quantum-computing"]

[lib]
name = "qublis_qmesh"
path = "src/lib.rs"

[dependencies]
# Quantum Number System integration
qublis-qnum = { workspace = true }

# Directed‐acyclic‐graph utilities
petgraph = "0.6"

# Configuration & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

[features]
# Enable QNum support for entropic state
qnum = ["qublis-qnum"]
# Default includes QNum only
default = ["qnum"]

[dev-dependencies]
# Benchmarking (optional)
criterion = { version = "0.3", optional = true }

[package.metadata]
# Proprietary workspace package; not published to crates.io
publish = false
