[package]
name = "qublis-qnet"
version = "2.0.0"
edition = "2021"
authors = ["Nic NicNac Neil <admin@qublis.com>"]
description = "Probabilistic routing, relay & teleportation core for Qublis v2.0"
license = "Proprietary"
repository = "https://github.com/qublis/qublis-2-74136-v2.0"
readme = "README.md"
keywords = ["routing", "teleport", "quantum", "qublis"]
categories = ["network-programming", "quantum-computing"]

[lib]
name = "qublis_qnet"
path = "src/lib.rs"

[dependencies]
qublis-qnum = { workspace = true, optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"         
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.28", features = ["net", "sync", "time"] }
hashbrown = "0.12"
futures = "0.3"
num-complex = "0.4"        
toml = "0.8"

[features]
default = ["qnum"]
qnum = ["qublis-qnum"]
teleport = []
metrics = []

[dev-dependencies]
criterion = { version = "0.3" }

[package.metadata]
publish = false
