[package]
name = "qublis-qnum"
version = "2.0.0"
edition = "2021"
authors = ["Nic Neil <nic@qublis.org>"]
description = "Quantum Number System (QNS) core types, gates, entanglement and measurement primitives for Qublis v2.0"
license = "Proprietary"
repository = "https://github.com/YourOrg/qublis-2-74136-v2.0"
readme = "README.md"
keywords = ["quantum", "qnum", "superposition", "entanglement", "qublis"]
categories = ["data-structures", "quantum-computing", "math"]

[lib]
name = "qublis_qnum"
path = "src/lib.rs"

[dependencies]
# Complex‐number support for amplitudes
num-complex = "0.4"
# Random state initialization, e.g. for Haar‐uniform Qid
rand = { version = "0.8", features = ["std"] }

[features]
# Core Qid / QNum types and normalization routines
core = []
# Entanglement utilities for QNum fusion and Bell‐state generation
entangle = []
# Measurement & collapse operators
measurement = []
# Default includes core and measurement
default = ["core", "measurement"]

[dev-dependencies]
# For serialization of test fixtures
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Approximate comparisons in tests
approx = "0.5"
# Criterion for benchmarks (optional)
criterion = { version = "0.3", optional = true }

[package.metadata]
# Indicate this is proprietary, not on crates.io
publish = false
