[package]
name = "qublis-qnum"
version = "2.0.0"
edition = "2021"
authors = ["Nic NicNac Neil <admin@qublis.com>"]
description = "Quantum Number System (QNS) core types, gates, entanglement and measurement primitives for Qublis v2.0"
license = "Proprietary"
repository = "https://github.com/qublis/qublis-2-74136-v2.0"
readme = "README.md"
keywords = ["quantum", "qnum", "superposition", "entanglement", "qublis"]
categories = ["data-structures", "quantum-computing", "math"]

[lib]
name = "qublis_qnum"
path = "src/lib.rs"

[dependencies]
# Wrap f64 in a Hash+Eq newtype for amplitudes
ordered-float = { version = "3.0", features = ["serde"] }
# Complex‐number support for amplitudes
num-complex = "0.4"
# Random state initialization, e.g. for Haar‐uniform Qid
rand = { version = "0.8", features = ["std"] }
# Serialization support for QNum/Qid
serde = { version = "1.0", features = ["derive"] }

[features]
# Core Qid / QNum types and normalization routines
core = []
# Entanglement utilities for QNum fusion and Bell‐state generation
entangle = []
# Measurement & collapse operators
measurement = []
# Default includes core and measurement
default = ["core", "measurement"]

[dev-dependencies]
serde_json = "1.0"
# Approximate comparisons in tests
approx = "0.5"
# Criterion for benchmarks (optional)
criterion = { version = "0.3"}

[package.metadata]
# Indicate this is proprietary, not on crates.io
publish = false
